--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>极光的茶壶 - 喵喵喵~</title>
-    <link rel="shortcut icon" href="test-site/images/head/head.ico" />
+    <link rel="shortcut icon" href="sourse/images/head/head.ico" />
   </head>
   <body>
     <script>
