--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>极光的茶壶 - 喵喵喵~</title>
     <link rel="shortcut icon" href="sourse/images/head/head.ico" />
+    <meta name="keywords" content="E12AzQ, 极光の茶壶, 极光的茶壶">
   </head>
   <body>
     <script>
