--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>极光的茶壶 - 喵喵喵~</title>
     <link rel="shortcut icon" href="sourse/images/head/head.ico" />
     <meta name="keywords" content="E12AzQ, 极光の茶壶, 极光的茶壶">
+    <meta name="description" content="极光的个人网站">
   </head>
   <body>
     <script>
