--- a/index.html
+++ b/index.html
@@ -8,13 +8,35 @@
     <link rel="shortcut icon" href="sourse/images/head/head.ico" />
     <meta name="keywords" content="E12AzQ, 极光の茶壶, 极光的茶壶" />
     <meta name="description" content="极光的个人网站" />
+    <style>
+      .tou img {
+        box-shadow: inset 0 0 10px #000;
+        padding: 5px;
+        opacity: 1;
+        border-radius: 50%;
+        transform: rotate(0);
+        -webkit-transform: rotate(0);
+        -moz-transform: rotate(0);
+        -o-transform: rotate(0);
+        -ms-transform: rotate(0);
+        transition: all ease 1s;
+        -webkit-transition: all ease 1s;
+        -moz-transition: all ease 1s;
+        -o-transition: all ease 1s;
+      }
+      .tou img:hover {
+        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+      }
+    </style>
   </head>
-  <body>
-    <div
-      class="box-shadow: inset 0 0 10px #000; padding: 5px; opacity: 1; transform: rotate(360); -webkit-transform: rotate(360); -moz-transform: rotate(360); -o-transform: rotate(360); -ms-transform: rotate(360); transition: all ease 1s; -webkit-transition: all ease 1s; -moz-transition: all ease 1s; -o-transition: all ease 1s;"
-    >
+  <body style="text-align: center">
+    <div class="tou">
       <a href="https://e12azq.github.io/-/"
-        ><img src="sourse/images/head/head.png" alt="头像"
+        ><img src="sourse/images/head/head.png" alt="头像" width="150px"
       /></a>
     </div>
     <script>
