--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>极光的茶壶 - 喵喵喵~</title>
+    <title>极光の茶壶 - 喵喵喵~</title>
     <link rel="shortcut icon" href="sourse/images/head/head.ico" />
     <meta name="keywords" content="E12AzQ, 极光の茶壶, 极光的茶壶" />
     <meta name="description" content="极光的个人网站" />
