--- a/index.html
+++ b/index.html
@@ -6,40 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>极光の茶壶 - 喵喵喵~</title>
     <link rel="shortcut icon" href="sourse/images/head/head.ico" />
+    <link rel="stylesheet" href="style.css" />
     <meta name="keywords" content="E12AzQ, 极光の茶壶, 极光的茶壶" />
     <meta name="description" content="极光的个人网站" />
-    <style>
-      .tou img {
-        box-shadow: inset 0 0 10px #000;
-        padding: 5px;
-        opacity: 1;
-        border-radius: 50%;
-        transform: rotate(0);
-        -webkit-transform: rotate(0);
-        -moz-transform: rotate(0);
-        -o-transform: rotate(0);
-        -ms-transform: rotate(0);
-        transition: all ease 1s;
-        -webkit-transition: all ease 1s;
-        -moz-transition: all ease 1s;
-        -o-transition: all ease 1s;
-      }
-      .tou img:hover {
-        transform: rotate(360deg);
-        -webkit-transform: rotate(360deg);
-        -moz-transform: rotate(360deg);
-        -o-transform: rotate(360deg);
-        -ms-transform: rotate(360deg);
-      }
-    </style>
   </head>
-  <body style="text-align: center">
+  <body>
     <div class="tou">
-      <a href="https://e12azq.github.io/-/"
-        ><img src="sourse/images/head/head.png" alt="头像" width="150px"
-      /></a>
+      <img src="sourse/images/head/head.png" alt="头像" width="150px" />
     </div>
-    <p>你太小看我了，张志恒（doge</p>
     <script>
       !(function () {
         function n(n, e, t) {
