--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="tou">
       <img src="sourse/images/head/head.png" alt="头像" width="150px" />
     </div>
+    <p>我来证明自己啦，纯则粹！_(米游姬糖葫芦)</p>
     <script>
       !(function () {
         function n(n, e, t) {
