--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
     <meta name="description" content="极光的个人网站" />
   </head>
   <body>
-    <div class="tou">
-      <img src="sourse/images/head/head.png" alt="头像" width="150px" />
+    <img
+      class="tou"
+      src="sourse/images/head/head.png"
+      alt="头像"
+      width="150px"
+    />
+    <div class="kuang">
+      <h1>你好呀<br />(*^▽^*)</h1>
+      <p>先写点儿啥</p>
     </div>
-    <p>我来证明自己啦，纯则粹！_(米游姬糖葫芦)</p>
     <script>
       !(function () {
         function n(n, e, t) {
