--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       width="150px"
     />
     <div class="kuang">
-      <h1>你好呀，纯则粹<br />(*^▽^*)</h1>
+      <h1>你好呀<br />(*^▽^*)</h1>
       <p>写点儿啥呢？</p>
     </div>
     <script>
