--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <img
       class="tou"
-      src="sourse/images/head/head.png"
+      src="sourse/images/head/head.pn"
       alt="头像"
       width="130px"
     />
